--- a/feed.html
+++ b/feed.html
@@ -4,14 +4,14 @@
 <head>
   <title>Fake Insta</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='/css/style.css' />
+  <link rel='stylesheet' href='./css/style.css' />
 </head>
 
 <body>
   <header>
     <div class="container header">
       <div id="logo">
-        <img src="/img/logo.png">
+        <img src="./img/logo.png">
       </div>
       <div class="busca">
         <form>
@@ -20,14 +20,14 @@
       </div>
       <nav>
         <a href="/publicar">
-          <img src="/img/icons/plus.svg" alt="Adicionar Publicação" title="Adicionar Publicação">
+          <img src="./img/icons/plus.svg" alt="Adicionar Publicação" title="Adicionar Publicação">
         </a>
         <a href="/home">
-          <img src="/img/icons/home.svg">
+          <img src="./img/icons/home.svg">
         </a>
         <a href="">
           <div class="avatar-content">
-            <img class="avatar" src="/img/avatar-example.png">
+            <img class="avatar" src="./img/avatar-example.png">
             <b>Nome do Usuário</b>
           </div>
         </a>
@@ -38,18 +38,18 @@
     <div class="card" id="">
       <div class="card-header">
         <div>
-          <img class="avatar" src="/img/avatar-example.png">
+          <img class="avatar" src="./img/avatar-example.png">
           <b>Ana Paula</b>
         </div>
-        <img src="/img/icons/more-vertical.svg">
+        <img src="./img/icons/more-vertical.svg">
       </div>
       <div class="card-img">
-        <img src="/img/publication_example.jpg">
+        <img src="./img/publication_example.jpg">
       </div>
       <div class="card-body">
         <div class="card-itens">
           <div class="likes" >
-            <img src="img/icons/heart.svg" width="24px" onclick="addLike(this)">
+            <img src="./img/icons/heart.svg" width="24px" onclick="addLike(this)">
             <b>0 likes</b>
           </div>
           <b>Postado no dia: 00/00/0000</b>
@@ -67,7 +67,7 @@
     <button id="more">Ver Mais</button>
   </main>
 
-  <script src="js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
